--- a/.github/workflows/refresh.yaml
+++ b/.github/workflows/refresh.yaml
@@ -34,7 +34,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          ref: main
+          ref: ${{ github.ref }}
 
       - name: Prepare
         uses: actions/setup-python@v5
