更新 refresh.yaml

--- a/.github/workflows/refresh.yaml
+++ b/.github/workflows/refresh.yaml
@@ -1,29 +1,34 @@
 name: Refresh
+
 on:
-  # performed every two hours
+  # 每两小时执行一次
   schedule:
     - cron: "0 */2 * * *"
+  # 允许手动触发
   workflow_dispatch:
+  # 添加push事件来确保每次提交都触发工作流
+  push:
+    branches: [main]
+    paths:
+      - 'subscribe/**'
+      - '**.yml'
+      - '**.yaml'
+      - 'requirements.txt'
 
 concurrency:
   group: ${{ github.repository }}
   cancel-in-progress: true
 
 env:
-  # time zone
+  # 设置时区
   TZ: Asia/Shanghai
-
-  # github access token
+  # GitHub访问令牌
   GIST_PAT: ${{ secrets.GIST_PAT }}
-
-  # github username and gist id, separated by '/'
+  # GitHub用户名和gist ID，以'/'分隔
   GIST_LINK: ${{ secrets.GIST_LINK }}
-
-  # the url to the list of airports that you maintain yourself
-  # each line include domain, coupon and invitation code, the domain must be included, and the latter two items are optional
+  # 你自己维护的机场列表URL
   CUSTOMIZE_LINK: ${{ secrets.CUSTOMIZE_LINK }}
-
-  # include special protocols, such as vless hysteria2 and hysteria
+  # 包括特殊协议，如vless hysteria2和hysteria
   ENABLE_SPECIAL_PROTOCOLS: ${{ vars.ENABLE_SPECIAL_PROTOCOLS }}
 
 jobs:
@@ -31,41 +36,42 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          ref: ${{ github.ref }}
+    - name: Checkout
+      uses: actions/checkout@v4
+      with:
+        # 确保checkout的是你修改的分支
+        ref: main
 
-      - name: Prepare
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.x"
-          architecture: "x64"
-          cache: "pip"
+    - name: Prepare
+      uses: actions/setup-python@v5
+      with:
+        python-version: "3.x"
+        architecture: "x64"
+        cache: "pip"
 
-      - name: Install
-        run: pip3 install -r requirements.txt
+    - name: Install
+      run: pip3 install -r requirements.txt
 
-      - name: Check
-        run: |
-          if [ -z "$GIST_PAT" ]; then
-              echo "Error: environment 'GIST_PAT' cannot be empty"
-              exit 1
-          fi
+    - name: Check
+      run: | 
+        if [ -z "$GIST_PAT" ]; then
+            echo "Error: environment 'GIST_PAT' cannot be empty"
+            exit 1
+        fi
 
-          if [ -z "$GIST_LINK" ]; then
-              echo "Error: environment 'GIST_LINK' cannot be empty"
-              exit 1
-          fi
+        if [ -z "$GIST_LINK" ]; then
+            echo "Error: environment 'GIST_LINK' cannot be empty"
+            exit 1
+        fi
 
-          LINK_PARTS=$(echo "$GIST_LINK" | awk -F'/' 'NF==2 && $1!="" && $2!=""')
-          if [ -z "$LINK_PARTS" ]; then
-              echo "Error: environment 'GIST_LINK' is not valid, should be 'username/gist_id' format"
-              exit 1
-          fi
+        LINK_PARTS=$(echo "$GIST_LINK" | awk -F'/' 'NF==2 && $1!="" && $2!=""')
+        if [ -z "$LINK_PARTS" ]; then
+            echo "Error: environment 'GIST_LINK' is not valid, should be 'username/gist_id' format"
+            exit 1
+        fi
 
-      - name: Refresh
-        run: python -u subscribe/collect.py --all --refresh --overwrite --skip
+    - name: Refresh
+      run: python -u subscribe/collect.py --all --refresh --overwrite --skip
 
-      - name: Timestamp
-        run: date
+    - name: Timestamp
+      run: date
