--- a/.github/workflows/refresh.yaml
+++ b/.github/workflows/refresh.yaml
@@ -41,7 +41,7 @@ jobs:
       uses: actions/checkout@v4
       with:
         # 确保checkout的是你修改的分支
-        ref: main
+        ref: ${{ github.ref }}
 
     - name: Prepare
       uses: actions/setup-python@v5
@@ -72,7 +72,7 @@ jobs:
         fi
 
     - name: Refresh
-      run: python -u subscribe/collect.py --all --refresh --overwrite
+      run: python -u subscribe/collect.py --all --refresh --overwrite --skip
 
     - name: Timestamp
       run: date
