--- a/.github/workflows/refresh.yaml
+++ b/.github/workflows/refresh.yaml
@@ -10,11 +10,7 @@ on:
   push:
     branches: [main]
     paths:
-      - 'subscribe/**'
-      - '**.yml'
-      - '**.yaml'
-      - '**.toml'
-      - 'requirements.txt'
+      - 'refresh.yaml'
 
 concurrency:
   group: ${{ github.repository }}
@@ -72,7 +68,7 @@ jobs:
         fi
 
     - name: Refresh
-      run: python -u subscribe/collect.py --all --refresh --overwrite
+      run: python -u subscribe/collect.py --all --refresh --overwrite --skip
 
     - name: Timestamp
       run: date
